2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* about.c: fix Gman's email address.

2006-01-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-system-log.desktop.in: fix the Category key, by adding ';'
	at the end (closes bug #328584).

2006-01-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* main.c: remove an unnecessary cast.

2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* main.c: fix indentation; allocate an array of NULL-terminated string
	to be passed to the clone commands; fix command-line options parsing;
	add a "-V|--version" option (shows the version of gnome-system-log).

2006-01-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* help/C/gnome-system-log.xml: fix the manual's title and abstract
	for a better classification under Scrollkeeper (closes bug #327793).

2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.h
	* userprefs.c (prefs_init)
	* main.c: Remove call to the deprecated gconf_init,
	and change the prefs_init signature.

2006-01-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.c (prefs_load): Initialize GError before using it (fix
	bug #327614).  Plus, clean up the code.

2005-12-06  Vincent Noel  <noel@localhost.localdomain>

	* logview.schemas.in: Fix some key descriptions. Fix bug #323141.

2005-12-02  Vincent Noel  <vincent.noel@gmail.com>

	* gnome-system-log.desktop.in: Add the Monitor category to
	.desktop file. Patch by Matthias Clasen. Fixes bug #322132.

2005-11-28  Guilherme de S. Pastore  <gpastore@gnome.org>

	* about.c (logview_about): fixed a typo in the author credits.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_add_lines), (log_read_new_lines): Apparently you
	  can't compare a GnomeVFSFileSize with a GnomeVFSFileOffset.

2005-11-23  Vincent Noel  <vincent.noel@gmail.com>

	* logrtns.c: (log_stats_reload), (log_read_new_lines): Update the
	line count and last modification date when a log is updated.

2005-11-18  Vincent Noel  <vincent.noel@gmail.com>
