@@ -1,3 +1,10 @@
+2006-02-03  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* misc.c (widget_set_font): check for NULL font name.
+
+	* logview.c: pass "Monospace 10" as default monospace font name and
+	size, in case GConf returns an empty string (closes bug #329704).
+
 2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* about.c: fix Gman's email address.
